--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-
+WOOCOMMERCE_CONSUMER_KEY=ck_c212adc8dfef5b3359bc3aed240734feeba99e1d
+WOOCOMMERCE_CONSUMER_SECRET=cs_d0500f4df5255c658a04556f2a0993c992daaed7
